# cmake-learn

./: CMakeLists.txt  TutorialConfig.h.in  tutorial.cxx
MathFunctions/: CMakeLists.txt  MathFunctions.h
project/: CMakeLists.txt  start.sh
